do bot_create page

--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    <div class="row">
-        <h2>Введите данные, чтобы создать своего личного телеграмм-бота</h2>
-        <form class="col-6 offset-3" method="post" action="/create_bot/"><br>
-            <input type="text" class="form-control" placeholder="Bot TOKEN">
-            <input type="text" class="form-control" placeholder="Bot name">
-            <input type="text" class="form-control" placeholder="Bpt short name">
-            <input type="button" class="form-control btn btn-primary">
+    <div class="row mt-5">
+        <h3 class="mt-5 text-center">Введите данные, чтобы создать своего личного телеграмм-бота</h3>
+        <form class="col-6 offset-3 form card p-2" method="post" action="/create_bot/"><br>
+            <input type="text" class="form-control m-1" placeholder="Bot TOKEN">
+            <input type="text" class="form-control m-1" placeholder="Bot name">
+            <input type="text" class="form-control m-1" placeholder="Bpt short name">
+            <input type="button" class="form-control m-1 btn btn-primary" value="Добавить функции">
             <input class="btn btn-primary col-4 offset-4" type="submit" value="Отправить">
         </form>
     </div>
