--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>{{ pagetitle }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
 <header>
