--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" style="background-color: #3271a5;">
+<nav class="navbar navbar-expand-md fixed-top" style="background-color: #3271a5; color: white">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">BotGod</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
