fix bag with values of functions in JS

--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -30,7 +30,7 @@
             let new_option = document.createElement("option")
 
             new_option.innerHTML = names[i]
-            new_option.value = toString(i)
+            new_option.value = i
             new_section.appendChild(new_option)
         }
         document.querySelector("#functions").appendChild(new_section)
