--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -6,6 +6,7 @@
     <title>{{ pagetitle }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
 <header>
@@ -17,5 +18,6 @@
 <script src="{% static 'bootstrap.bundle.min.js' %}"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+<script src="{% static 'jquery.js'%}"></script>
 </body>
 </html>
