--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -45,7 +45,7 @@
 	box-shadow: inset 0 0 2px rgba(0, 0, 0, .3);
 }
 .checkbox-ios input[type=checkbox]:checked + .checkbox-ios-switch {
-	background: limegreen;
+	background: rgb(43, 70, 223);
 }
 .checkbox-ios input[type=checkbox]:checked + .checkbox-ios-switch:before {
 	transform:translateX(28px);
