add payment system

--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md fixed-top text-light" style="background-color: #0c71e0; color: white">
+<nav class="navbar navbar-expand-md fixed-top text-light" style="background-color: #0088cc; color: white">
     <div class="container-fluid">
         <a class="navbar-brand text-light" href="/">BotGod</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
