--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -13,7 +13,7 @@
             <input required type="text" class="form-control m-1" placeholder="Bot short name">
             <div id="functions">
             </div>
-            <input class="btn btn-primary col-4 offset-4" type="submit" value="Отправить">
+            <input href="../payment/" class="btn btn-primary col-4 offset-4" type="submit" value="Отправить">
         </form>
         <button type="button" id="question" class="btn card-text text-muted text-end" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="display: none; margin-left: auto; font-size: 36px; margin-right: 10px; width: 50px">?</button>
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" style="display: none;">
@@ -59,10 +59,8 @@
     new Card("Reboot the PC", "Эта фукнция позволяет перезагрузить ваш компьютер(для этого даже не обязательно находится рядом с ним)", "free", "wiki.svg", [1, 0, 0]),
     new Card("Panda", "Эта фукнция присылает вам фотографию милой панды. Разве кто-то не любит панд?", "free", "wiki.svg", [1,1,1])]
 
-    console.log(cards.lenght)
     for(let i = 0; i < cards.length; ++i){
         let card_values = cards[i]
-        console.log(card_values.name.split(" ")[0])
         let template = `<div id="card" class="card mb-3" style="max-width: 900px; padding: 20px">
             <label class="checkbox-ios" style="margin-left: auto; margin-top: 10px">
                             <input type="checkbox">
@@ -88,12 +86,10 @@
         let result = new DOMParser().parseFromString(template, "text/html").getElementsByTagName("div")[0]
 
         functions.appendChild(result)
-        console.log(document.querySelector(`#${card_values.name}_question`))
         document.querySelector(`#${card_values.name.split(" ")[0]}_question`).addEventListener("click", () => {
             staticBackdropLabel.innerHTML = card_values.name
             modal_content.innerHTML = card_values.descriprion
         })
-        console.log()
     }
 
 </script>
