--- a/first/templates/payment.html
+++ b/first/templates/payment.html
@@ -9,10 +9,10 @@
                 <input type="hidden" name="label" value="$order_id"/>
                 <input type="hidden" name="quickpay-form" value="button"/>
                 <input type="hidden" name="sum" value="2" data-type="number"/>
+                <input type="hidden" name="successURL" value="https://my.informatics.ru/" data-type="number"/>
                 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="paymentType" value="PC" id="btnradio1" autocomplete="off">
-                    <label class="btn btn-outline-primary" style="border: 1px solid #6f42c1; color: #6f42c1" for="btnradio1">ЮMoney</label>
-                  
+                    <label class="btn btn-outline-primary --bs-purple" style="border: 1px solid #6f42c1; color: #6f42c1" for="btnradio1">ЮMoney</label>
                     <input type="radio" class="btn-check" name="paymentType" value="AC" id="btnradio2" autocomplete="off">
                     <label class="btn btn-outline-primary" for="btnradio2">Банковской картой</label>
                 </div><br>
