--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <title>{{ pagetitle }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
