--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -1,3 +1,19 @@
+h1, h2, h3 {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 900;
+}
+
+h4, h5, h6 {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+}
+
+a, p, span{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+}
+
+
 .checkbox-ios {
 	display: inline-block;    
 	height: 28px;    
