--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -1,38 +1,22 @@
-<nav class="navbar navbar-expand-md fixed-top text-light" style="background-color: #0088cc; color: white">
+<nav class="navbar" style="background-color: #023653; color: white">
     <div class="container-fluid">
         <a class="navbar-brand text-light" href="/">BotGod</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="/create_bot/">Создать бота</a>
-                        </li>
-                        {% if request.user.is_authenticated %}
-                            {% if request.user.is_superuser %}
-                                <li class="nav-item">
-                                    <a class="nav-link text-light" href="/admin_panel/">Панель администратора</a>
-                                </li>
-                            {% endif %}
-                        <li class="nav-item">
-                            <a class="nav-link text-light text-right" href="/complaint/">Пожаловаться</a>
-                        </li>
-                            <li style="" class="nav-item text-right ml-5">
-                                <a class="nav-link text-light text-right" href="/profile/{{request.user.id}}/">Профиль</a>
-                            </li>
-                            {% if request.user.is_authenticated %}
-                                <li style="float: right" class="nav-item text-right">
-                                    <a class="nav-link text-light text-right" href="/logout/">Выйти</a>
-                                </li>
-                            {% else %}
-                            <li style="float: right" class="nav-item">
-                                    <a class="nav-link text-light text-right" href="/login/">Войти</a>
-                                </li>
-                            {% endif %}
-                        {% endif %}
-                    </ul>
-            
-        </div>
+        <form class="d-flex col-10">
+                <a class="nav-link text-light m-2" href="/create_bot/">Создать бота</a>
+            {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                        <a class="nav-link m-2" href="/admin_panel/">Панель администратора</a>
+                {% endif %}
+                <a class="nav-link text-light m-2" href="/complaint/">Пожаловаться</a>
+        </form>
+      <form class="d-flex" role="search">
+                    <a class="nav-link text-light text-right m-2" href="/profile/{{request.user.id}}/">Профиль</a>
+                {% if request.user.is_authenticated %}
+                        <a class="nav-link text-light text-right m-2" href="/logout/">Выйти</a>
+                {% else %}
+                        <a class="nav-link text-light text-right m-2" href="/login/">Войти</a>
+                {% endif %}
+      </form>
+      {% endif %}
     </div>
-</nav>
+  </nav>
